--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
+0.8.1 - Ready for Haxe 3.x
 0.8.0 - Create/delete indexes on collections
 0.7.1 - Fixed object/array encoding, using Utf8
 0.7.0 - Initial Release
